--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,19 @@ body, html {
 	height: 100% !important;
 }
 .contact2{
-	margin:0 auto;
+	margin:35px auto;
 	text-align: left;
-	width: 70%;
+	width: 75%;
+}
+
+.contact2 .fa{
+    padding-right: 5px;
 }
 .contact2 li{
 	list-style: none;
 	padding-bottom: 10px;
 }
 .contact2 li span{
-	padding-left: 10px;
 	font-size: 20px !important;
 }
 
@@ -399,22 +402,21 @@ color: #2c3e50;
 .form-control:-ms-input-placeholder {
 color: #2c3e50;
 }
-#contact .social {
-	margin-top: 80px;
-}
-#contact .social ul li {
-	display: inline-block;
-	margin: 0 20px;
-}
+
+
 #contact .social i.fa {
 	font-size: 22px;
 	padding: 4px;
 	color: #444;
 	transition: all 0.5s;
 }
-#contact .social i.fa:hover {
-	color: #000;
+#contact .social i.fa:hover, #contact .social a {
+	color: #fff !important;
 }
+
+
+
+
 .btn:active, .btn.active {
 	background-image: none;
 	outline: 0;
